--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -906,67 +906,67 @@ CAN_britain_national_populist:0 "캐나다 자치령"
 CAN_britain_national_populist_ADJ:0 "캐나다"
 CAN_britain_national_populist_DEF:0 "캐나다 자치령"
 
-CAF_britain_totalist:0 "서인도제도 연합"
-CAF_britain_totalist_ADJ:0 "서인도제도"
-CAF_britain_totalist_DEF:0 "서인도제도 연합"
-CAF_britain_syndicalist:0 "서인도제도 연합"
-CAF_britain_syndicalist_ADJ:0 "서인도제도"
-CAF_britain_syndicalist_DEF:0 "서인도제도 연합"
-CAF_britain_radical_socialist:0 "서인도제도 연합"
-CAF_britain_radical_socialist_ADJ:0 "서인도제도"
-CAF_britain_radical_socialist_DEF:0 "서인도제도 연합"
-CAF_britain_social_democrat:0 "서인도제도 연방"
-CAF_britain_social_democrat_ADJ:0 "서인도제도"
-CAF_britain_social_democrat_DEF:0 "서인도제도 연방"
-CAF_britain_social_liberal:0 "서인도제도 연방"
-CAF_britain_social_liberal_ADJ:0 "서인도제도"
-CAF_britain_social_liberal_DEF:0 "서인도제도 연방"
-CAF_britain_market_liberal:0 "서인도제도 연방"
-CAF_britain_market_liberal_ADJ:0 "서인도제도"
-CAF_britain_market_liberal_DEF:0 "서인도제도 연방"
-CAF_britain_social_conservative:0 "서인도제도 연방"
-CAF_britain_social_conservative_ADJ:0 "서인도제도"
-CAF_britain_social_conservative_DEF:0 "서인도제도 연방"
-CAF_britain_authoritarian_democrat:0 "서인도제도 연방"
-CAF_britain_authoritarian_democrat_ADJ:0 "서인도제도"
-CAF_britain_authoritarian_democrat_DEF:0 "서인도제도 연방"
-CAF_britain_paternal_autocrat:0 "서인도제도 연방"
-CAF_britain_paternal_autocrat_ADJ:0 "서인도제도"
-CAF_britain_paternal_autocrat_DEF:0 "서인도제도 연방"
-CAF_britain_national_populist:0 "카리브국"
-CAF_britain_national_populist_ADJ:0 "서인도제도"
-CAF_britain_national_populist_DEF:0 "카리브국"
+CAF_SOCDEM_britain_totalist:0 "서인도제도 연합"
+CAF_SOCDEM_britain_totalist_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_totalist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_britain_syndicalist:0 "서인도제도 연합"
+CAF_SOCDEM_britain_syndicalist_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_syndicalist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_britain_radical_socialist:0 "서인도제도 연합"
+CAF_SOCDEM_britain_radical_socialist_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_radical_socialist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_britain_social_democrat:0 "서인도제도 연방"
+CAF_SOCDEM_britain_social_democrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_social_democrat_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_social_liberal:0 "서인도제도 연방"
+CAF_SOCDEM_britain_social_liberal_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_social_liberal_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_market_liberal:0 "서인도제도 연방"
+CAF_SOCDEM_britain_market_liberal_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_market_liberal_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_social_conservative:0 "서인도제도 연방"
+CAF_SOCDEM_britain_social_conservative_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_social_conservative_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_authoritarian_democrat:0 "서인도제도 연방"
+CAF_SOCDEM_britain_authoritarian_democrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_authoritarian_democrat_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_paternal_autocrat:0 "서인도제도 연방"
+CAF_SOCDEM_britain_paternal_autocrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_paternal_autocrat_DEF:0 "서인도제도 연방"
+CAF_SOCDEM_britain_national_populist:0 "카리브국"
+CAF_SOCDEM_britain_national_populist_ADJ:0 "서인도제도"
+CAF_SOCDEM_britain_national_populist_DEF:0 "카리브국"
 
-KAZ_caf_authoritarian_democrat:0 "중앙아시아 연방"
-KAZ_caf_authoritarian_democrat_ADJ:0 "중앙아시아"
-KAZ_caf_authoritarian_democrat_DEF:0 "중앙아시아 연방"
-KAZ_caf_market_liberal:0 "중앙아시아 연방"
-KAZ_caf_market_liberal_ADJ:0 "중앙아시아"
-KAZ_caf_market_liberal_DEF:0 "중앙아시아 연방"
-KAZ_caf_national_populist:0 "중앙아시아 연방"
-KAZ_caf_national_populist_ADJ:0 "중앙아시아"
-KAZ_caf_national_populist_DEF:0 "중앙아시아 연방"
-KAZ_caf_paternal_autocrat:0 "중앙아시아 연방"
-KAZ_caf_paternal_autocrat_ADJ:0 "중앙아시아"
-KAZ_caf_paternal_autocrat_DEF:0 "중앙아시아 연방"
-KAZ_caf_radical_socialist:0 "중앙아시아 연방"
-KAZ_caf_radical_socialist_ADJ:0 "중앙아시아"
-KAZ_caf_radical_socialist_DEF:0 "중앙아시아 연방"
-KAZ_caf_social_conservative:0 "중앙아시아 연방"
-KAZ_caf_social_conservative_ADJ:0 "중앙아시아"
-KAZ_caf_social_conservative_DEF:0 "중앙아시아 연방"
-KAZ_caf_social_democrat:0 "중앙아시아 연방"
-KAZ_caf_social_democrat_ADJ:0 "중앙아시아"
-KAZ_caf_social_democrat_DEF:0 "중앙아시아 연방"
-KAZ_caf_social_liberal:0 "중앙아시아 연방"
-KAZ_caf_social_liberal_ADJ:0 "중앙아시아"
-KAZ_caf_social_liberal_DEF:0 "중앙아시아 연방"
-KAZ_caf_syndicalist:0 "중앙아시아 연방"
-KAZ_caf_syndicalist_ADJ:0 "중앙아시아"
-KAZ_caf_syndicalist_DEF:0 "중앙아시아 연방"
-KAZ_caf_totalist:0 "중앙아시아 연방"
-KAZ_caf_totalist_ADJ:0 "중앙아시아"
-KAZ_caf_totalist_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_authoritarian_democrat:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_authoritarian_democrat_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_authoritarian_democrat_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_market_liberal:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_market_liberal_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_market_liberal_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_national_populist:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_national_populist_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_national_populist_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_paternal_autocrat:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_paternal_autocrat_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_paternal_autocrat_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_radical_socialist:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_radical_socialist_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_radical_socialist_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_conservative:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_conservative_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_social_conservative_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_democrat:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_democrat_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_social_democrat_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_liberal:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_social_liberal_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_social_liberal_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_syndicalist:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_syndicalist_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_syndicalist_DEF:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_totalist:0 "중앙아시아 연방"
+KAZ_CAF_SOCDEM_totalist_ADJ:0 "중앙아시아"
+KAZ_CAF_SOCDEM_totalist_DEF:0 "중앙아시아 연방"
 
 AUS_GER_authoritarian_democrat:0 "독일 제국"
 AUS_GER_authoritarian_democrat_ADJ:0 "독일"
@@ -3366,67 +3366,67 @@ BATCOM_national_populist:0 "바타비아 코뮌"
 BATCOM_national_populist_ADJ:0 "바타비아"
 BATCOM_national_populist_DEF:0 "바타비아 코뮌"
 
-DIETSREP_totalist:0 "네덜란드"
-DIETSREP_totalist_ADJ:0 "네덜란드"
-DIETSREP_totalist_DEF:0 "네덜란드"
-DIETSREP_syndicalist:0 "네덜란드"
-DIETSREP_syndicalist_ADJ:0 "네덜란드"
-DIETSREP_syndicalist_DEF:0 "네덜란드"
-DIETSREP_radical_socialist:0 "네덜란드"
-DIETSREP_radical_socialist_ADJ:0 "네덜란드"
-DIETSREP_radical_socialist_DEF:0 "네덜란드"
-DIETSREP_social_democrat:0 "네덜란드"
-DIETSREP_social_democrat_ADJ:0 "네덜란드"
-DIETSREP_social_democrat_DEF:0 "네덜란드"
-DIETSREP_social_liberal:0 "네덜란드"
-DIETSREP_social_liberal_ADJ:0 "네덜란드"
-DIETSREP_social_liberal_DEF:0 "네덜란드"
-DIETSREP_market_liberal:0 "네덜란드"
-DIETSREP_market_liberal_ADJ:0 "네덜란드"
-DIETSREP_market_liberal_DEF:0 "네덜란드"
-DIETSREP_social_conservative:0 "네덜란드"
-DIETSREP_social_conservative_ADJ:0 "네덜란드"
-DIETSREP_social_conservative_DEF:0 "네덜란드"
-DIETSREP_authoritarian_democrat:0 "네덜란드"
-DIETSREP_authoritarian_democrat_ADJ:0 "네덜란드"
-DIETSREP_authoritarian_democrat_DEF:0 "네덜란드"
-DIETSREP_paternal_autocrat:0 "네덜란드"
-DIETSREP_paternal_autocrat_ADJ:0 "네덜란드"
-DIETSREP_paternal_autocrat_DEF:0 "네덜란드"
-DIETSREP_national_populist:0 "네덜란드"
-DIETSREP_national_populist_ADJ:0 "네덜란드"
-DIETSREP_national_populist_DEF:0 "네덜란드"
+DIETSREP_totalist:0 "더치란드"
+DIETSREP_totalist_ADJ:0 "더치"
+DIETSREP_totalist_DEF:0 "더치란드"
+DIETSREP_syndicalist:0 "더치란드"
+DIETSREP_syndicalist_ADJ:0 "더치"
+DIETSREP_syndicalist_DEF:0 "더치란드"
+DIETSREP_radical_socialist:0 "더치란드"
+DIETSREP_radical_socialist_ADJ:0 "더치"
+DIETSREP_radical_socialist_DEF:0 "더치란드"
+DIETSREP_social_democrat:0 "더치란드"
+DIETSREP_social_democrat_ADJ:0 "더치"
+DIETSREP_social_democrat_DEF:0 "더치란드"
+DIETSREP_social_liberal:0 "더치란드"
+DIETSREP_social_liberal_ADJ:0 "더치"
+DIETSREP_social_liberal_DEF:0 "더치란드"
+DIETSREP_market_liberal:0 "더치란드"
+DIETSREP_market_liberal_ADJ:0 "더치"
+DIETSREP_market_liberal_DEF:0 "더치란드"
+DIETSREP_social_conservative:0 "더치란드"
+DIETSREP_social_conservative_ADJ:0 "더치"
+DIETSREP_social_conservative_DEF:0 "더치란드"
+DIETSREP_authoritarian_democrat:0 "더치란드"
+DIETSREP_authoritarian_democrat_ADJ:0 "더치"
+DIETSREP_authoritarian_democrat_DEF:0 "더치란드"
+DIETSREP_paternal_autocrat:0 "더치란드"
+DIETSREP_paternal_autocrat_ADJ:0 "더치"
+DIETSREP_paternal_autocrat_DEF:0 "더치란드"
+DIETSREP_national_populist:0 "더치란드"
+DIETSREP_national_populist_ADJ:0 "더치"
+DIETSREP_national_populist_DEF:0 "더치란드"
 
-DIETSMON_totalist:0 "네덜란드"
-DIETSMON_totalist_ADJ:0 "네덜란드"
-DIETSMON_totalist_DEF:0 "네덜란드"
-DIETSMON_syndicalist:0 "네덜란드"
-DIETSMON_syndicalist_ADJ:0 "네덜란드"
-DIETSMON_syndicalist_DEF:0 "네덜란드"
-DIETSMON_radical_socialist:0 "네덜란드"
-DIETSMON_radical_socialist_ADJ:0 "네덜란드"
-DIETSMON_radical_socialist_DEF:0 "네덜란드"
-DIETSMON_social_democrat:0 "네덜란드"
-DIETSMON_social_democrat_ADJ:0 "네덜란드"
-DIETSMON_social_democrat_DEF:0 "네덜란드"
-DIETSMON_social_liberal:0 "네덜란드"
-DIETSMON_social_liberal_ADJ:0 "네덜란드"
-DIETSMON_social_liberal_DEF:0 "네덜란드"
-DIETSMON_market_liberal:0 "네덜란드"
-DIETSMON_market_liberal_ADJ:0 "네덜란드"
-DIETSMON_market_liberal_DEF:0 "네덜란드"
-DIETSMON_social_conservative:0 "네덜란드"
-DIETSMON_social_conservative_ADJ:0 "네덜란드"
-DIETSMON_social_conservative_DEF:0 "네덜란드"
-DIETSMON_authoritarian_democrat:0 "네덜란드"
-DIETSMON_authoritarian_democrat_ADJ:0 "네덜란드"
-DIETSMON_authoritarian_democrat_DEF:0 "네덜란드"
-DIETSMON_paternal_autocrat:0 "네덜란드"
-DIETSMON_paternal_autocrat_ADJ:0 "네덜란드"
-DIETSMON_paternal_autocrat_DEF:0 "네덜란드"
-DIETSMON_national_populist:0 "네덜란드"
-DIETSMON_national_populist_ADJ:0 "네덜란드"
-DIETSMON_national_populist_DEF:0 "네덜란드"
+DIETSMON_totalist:0 "더치란드"
+DIETSMON_totalist_ADJ:0 "더치"
+DIETSMON_totalist_DEF:0 "더치란드"
+DIETSMON_syndicalist:0 "더치란드"
+DIETSMON_syndicalist_ADJ:0 "더치"
+DIETSMON_syndicalist_DEF:0 "더치란드"
+DIETSMON_radical_socialist:0 "더치란드"
+DIETSMON_radical_socialist_ADJ:0 "더치"
+DIETSMON_radical_socialist_DEF:0 "더치란드"
+DIETSMON_social_democrat:0 "더치란드"
+DIETSMON_social_democrat_ADJ:0 "더치"
+DIETSMON_social_democrat_DEF:0 "더치란드"
+DIETSMON_social_liberal:0 "더치란드"
+DIETSMON_social_liberal_ADJ:0 "더치"
+DIETSMON_social_liberal_DEF:0 "더치란드"
+DIETSMON_market_liberal:0 "더치란드"
+DIETSMON_market_liberal_ADJ:0 "더치"
+DIETSMON_market_liberal_DEF:0 "더치란드"
+DIETSMON_social_conservative:0 "더치란드"
+DIETSMON_social_conservative_ADJ:0 "더치"
+DIETSMON_social_conservative_DEF:0 "더치란드"
+DIETSMON_authoritarian_democrat:0 "더치란드"
+DIETSMON_authoritarian_democrat_ADJ:0 "더치"
+DIETSMON_authoritarian_democrat_DEF:0 "더치란드"
+DIETSMON_paternal_autocrat:0 "더치란드"
+DIETSMON_paternal_autocrat_ADJ:0 "더치"
+DIETSMON_paternal_autocrat_DEF:0 "더치란드"
+DIETSMON_national_populist:0 "더치란드"
+DIETSMON_national_populist_ADJ:0 "더치"
+DIETSMON_national_populist_DEF:0 "더치란드"
 
 GUA_LIB_market_liberal:0 "과테말라"
 GUA_LIB_market_liberal_ADJ:0 "과테말라"
@@ -3485,8 +3485,8 @@ NIC_LIB_totalist_ADJ:0 "니카라과"
 NIC_LIB_totalist_DEF:0 "니카라과"
 
 
-mittelafrika_formed_authoritarian_democrat:0 "독일령 중앙아프리카"
-mittelafrika_formed_authoritarian_democrat_DEF:0 "독일령 중앙아프리카"
+mittelafrika_formed_authoritarian_democrat:0 "중앙아프리카"
+mittelafrika_formed_authoritarian_democrat_DEF:0 "중앙아프리카"
 mittelafrika_formed_authoritarian_democrat_ADJ:0 "중앙아프리카"
 
 RAS_ARB_totalist:0 "아라비아 코뮌"
@@ -3550,37 +3550,6 @@ EMI_PAR_paternal_autocrat_DEF:0 "파르마"
 EMI_PAR_national_populist:0 "파르마"
 EMI_PAR_national_populist_ADJ:0 "파르마"
 EMI_PAR_national_populist_DEF:0 "파르마"
-
-MEE_totalist:0 "멕시코"
-MEE_totalist_ADJ:0 "멕시코"
-MEE_totalist_DEF:0 "멕시코"
-MEE_syndicalist:0 "멕시코"
-MEE_syndicalist_ADJ:0 "멕시코"
-MEE_syndicalist_DEF:0 "멕시코"
-MEE_radical_socialist:0 "멕시코"
-MEE_radical_socialist_ADJ:0 "멕시코"
-MEE_radical_socialist_DEF:0 "멕시코"
-MEE_social_democrat:0 "멕시코 제국"
-MEE_social_democrat_ADJ:0 "멕시코"
-MEE_social_democrat_DEF:0 "멕시코 제국"
-MEE_social_liberal:0 "멕시코 제국"
-MEE_social_liberal_ADJ:0 "멕시코"
-MEE_social_liberal_DEF:0 "멕시코 제국"
-MEE_market_liberal:0 "멕시코 제국"
-MEE_market_liberal_ADJ:0 "멕시코"
-MEE_market_liberal_DEF:0 "멕시코 제국"
-MEE_social_conservative:0 "멕시코 제국"
-MEE_social_conservative_ADJ:0 "멕시코"
-MEE_social_conservative_DEF:0 "멕시코 제국"
-MEE_authoritarian_democrat:0 "멕시코 제국"
-MEE_authoritarian_democrat_ADJ:0 "멕시코"
-MEE_authoritarian_democrat_DEF:0 "멕시코 제국"
-MEE_paternal_autocrat:0 "멕시코 제국"
-MEE_paternal_autocrat_ADJ:0 "멕시코"
-MEE_paternal_autocrat_DEF:0 "멕시코 제국"
-MEE_national_populist:0 "멕시코 제국"
-MEE_national_populist_ADJ:0 "멕시코"
-MEE_national_populist_DEF:0 "멕시코 제국"
 
 ##############
 #Vanilla
@@ -4000,36 +3969,36 @@ IRA_national_populist:0 "이란"
 IRA_national_populist_ADJ:0 "이란"
 IRA_national_populist_DEF:0 "이란"
 
-CAL_totalist:0 "미 태평양합중국"
-CAL_totalist_ADJ:0 "태평양"
-CAL_totalist_DEF:0 "미 태평양합중국"
-CAL_syndicalist:0 "미 태평양합중국"
-CAL_syndicalist_ADJ:0 "태평양"
-CAL_syndicalist_DEF:0 "미 태평양합중국"
-CAL_radical_socialist:0 "미 태평양합중국"
-CAL_radical_socialist_ADJ:0 "태평양"
-CAL_radical_socialist_DEF:0 "미 태평양합중국"
-CAL_social_democrat:0 "미 태평양합중국"
-CAL_social_democrat_ADJ:0 "태평양"
-CAL_social_democrat_DEF:0 "미 태평양합중국"
-CAL_social_liberal:0 "미 태평양합중국"
-CAL_social_liberal_ADJ:0 "태평양"
-CAL_social_liberal_DEF:0 "미 태평양합중국"
-CAL_market_liberal:0 "미 태평양합중국"
-CAL_market_liberal_ADJ:0 "태평양"
-CAL_market_liberal_DEF:0 "미 태평양합중국"
-CAL_social_conservative:0 "미 태평양합중국"
-CAL_social_conservative_ADJ:0 "태평양"
-CAL_social_conservative_DEF:0 "미 태평양합중국"
-CAL_authoritarian_democrat:0 "미 태평양합중국"
-CAL_authoritarian_democrat_ADJ:0 "태평양"
-CAL_authoritarian_democrat_DEF:0 "미 태평양합중국"
-CAL_paternal_autocrat:0 "미 태평양합중국"
-CAL_paternal_autocrat_ADJ:0 "태평양"
-CAL_paternal_autocrat_DEF:0 "미 태평양합중국"
-CAL_national_populist:0 "미 태평양합중국"
-CAL_national_populist_ADJ:0 "태평양"
-CAL_national_populist_DEF:0 "미 태평양합중국"
+CAL_ACW_totalist:0 "미 태평양합중국"
+CAL_ACW_totalist_ADJ:0 "태평양"
+CAL_ACW_totalist_DEF:0 "미 태평양합중국"
+CAL_ACW_syndicalist:0 "미 태평양합중국"
+CAL_ACW_syndicalist_ADJ:0 "태평양"
+CAL_ACW_syndicalist_DEF:0 "미 태평양합중국"
+CAL_ACW_radiCAL_ACW_socialist:0 "미 태평양합중국"
+CAL_ACW_radiCAL_ACW_socialist_ADJ:0 "태평양"
+CAL_ACW_radiCAL_ACW_socialist_DEF:0 "미 태평양합중국"
+CAL_ACW_social_democrat:0 "미 태평양합중국"
+CAL_ACW_social_democrat_ADJ:0 "태평양"
+CAL_ACW_social_democrat_DEF:0 "미 태평양합중국"
+CAL_ACW_social_liberal:0 "미 태평양합중국"
+CAL_ACW_social_liberal_ADJ:0 "태평양"
+CAL_ACW_social_liberal_DEF:0 "미 태평양합중국"
+CAL_ACW_market_liberal:0 "미 태평양합중국"
+CAL_ACW_market_liberal_ADJ:0 "태평양"
+CAL_ACW_market_liberal_DEF:0 "미 태평양합중국"
+CAL_ACW_social_conservative:0 "미 태평양합중국"
+CAL_ACW_social_conservative_ADJ:0 "태평양"
+CAL_ACW_social_conservative_DEF:0 "미 태평양합중국"
+CAL_ACW_authoritarian_democrat:0 "미 태평양합중국"
+CAL_ACW_authoritarian_democrat_ADJ:0 "태평양"
+CAL_ACW_authoritarian_democrat_DEF:0 "미 태평양합중국"
+CAL_ACW_paternal_autocrat:0 "미 태평양합중국"
+CAL_ACW_paternal_autocrat_ADJ:0 "태평양"
+CAL_ACW_paternal_autocrat_DEF:0 "미 태평양합중국"
+CAL_ACW_national_populist:0 "미 태평양합중국"
+CAL_ACW_national_populist_ADJ:0 "태평양"
+CAL_ACW_national_populist_DEF:0 "미 태평양합중국"
 
 CSA_ACW_totalist:0 "아메리카 노동연맹"
 CSA_ACW_totalist_ADJ:0 "생디칼"
@@ -4123,3 +4092,65 @@ USA_ACW_paternal_autocrat_DEF:0 "미합중국"
 USA_ACW_national_populist:0 "미합중국"
 USA_ACW_national_populist_ADJ:0 "연방"
 USA_ACW_national_populist_DEF:0 "미합중국"
+
+CAF_SOCDEM_totalist:0 "서인도제도 연합"
+CAF_SOCDEM_totalist_ADJ:0 "서인도제도"
+CAF_SOCDEM_totalist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_syndicalist:0 "서인도제도 연합"
+CAF_SOCDEM_syndicalist_ADJ:0 "서인도제도"
+CAF_SOCDEM_syndicalist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_radical_socialist:0 "서인도제도 연합"
+CAF_SOCDEM_radical_socialist_ADJ:0 "서인도제도"
+CAF_SOCDEM_radical_socialist_DEF:0 "서인도제도 연합"
+CAF_SOCDEM_social_democrat:0 "서인도제도 연맹"
+CAF_SOCDEM_social_democrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_social_democrat_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_social_liberal:0 "서인도제도 연맹"
+CAF_SOCDEM_social_liberal_ADJ:0 "서인도제도"
+CAF_SOCDEM_social_liberal_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_market_liberal:0 "서인도제도 연맹"
+CAF_SOCDEM_market_liberal_ADJ:0 "서인도제도"
+CAF_SOCDEM_market_liberal_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_social_conservative:0 "서인도제도 연맹"
+CAF_SOCDEM_social_conservative_ADJ:0 "서인도제도"
+CAF_SOCDEM_social_conservative_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_authoritarian_democrat:0 "서인도제도 연맹"
+CAF_SOCDEM_authoritarian_democrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_authoritarian_democrat_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_paternal_autocrat:0 "서인도제도 연맹"
+CAF_SOCDEM_paternal_autocrat_ADJ:0 "서인도제도"
+CAF_SOCDEM_paternal_autocrat_DEF:0 "서인도제도 연맹"
+CAF_SOCDEM_national_populist:0 "카리브국"
+CAF_SOCDEM_national_populist_ADJ:0 "카리브"
+CAF_SOCDEM_national_populist_DEF:0 "카리브국"
+
+CAF_union_totalist:0 "서인도제도 연합"
+CAF_union_totalist_ADJ:0 "서인도제도"
+CAF_union_totalist_DEF:0 "서인도제도 연합"
+CAF_union_syndicalist:0 "서인도제도 연합"
+CAF_union_syndicalist_ADJ:0 "서인도제도"
+CAF_union_syndicalist_DEF:0 "서인도제도 연합"
+CAF_union_radical_socialist:0 "서인도제도 연합"
+CAF_union_radical_socialist_ADJ:0 "서인도제도"
+CAF_union_radical_socialist_DEF:0 "서인도제도 연합"
+CAF_union_social_democrat:0 "서인도제도 연합"
+CAF_union_social_democrat_ADJ:0 "서인도제도"
+CAF_union_social_democrat_DEF:0 "서인도제도 연합"
+CAF_union_social_liberal:0 "서인도제도 연방"
+CAF_union_social_liberal_ADJ:0 "서인도제도"
+CAF_union_social_liberal_DEF:0 "서인도제도 연방"
+CAF_union_market_liberal:0 "서인도제도 연방"
+CAF_union_market_liberal_ADJ:0 "서인도제도"
+CAF_union_market_liberal_DEF:0 "서인도제도 연방"
+CAF_union_social_conservative:0 "서인도제도 연방"
+CAF_union_social_conservative_ADJ:0 "서인도제도"
+CAF_union_social_conservative_DEF:0 "서인도제도 연방"
+CAF_union_authoritarian_democrat:0 "서인도제도 연방"
+CAF_union_authoritarian_democrat_ADJ:0 "서인도제도"
+CAF_union_authoritarian_democrat_DEF:0 "서인도제도 연방"
+CAF_union_paternal_autocrat:0 "서인도제도 연방"
+CAF_union_paternal_autocrat_ADJ:0 "서인도제도"
+CAF_union_paternal_autocrat_DEF:0 "서인도제도 연방"
+CAF_union_national_populist:0 "카리브국"
+CAF_union_national_populist_ADJ:0 "카리브"
+CAF_union_national_populist_DEF:0 "카리브국"
