--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -729,7 +729,7 @@ argfor.16.d:0 "계속되는 FOP위기 해결의 주저함은 군부가 국가를
 argfor.16.a:0 "안 돼!"
 
 argfor.17.t:0 "우루과이가 우리의 '보호'를 받아들였습니다"
-argfor.17.d:0 "Likely feeling threathened by our military might, the regime in Montevideo has wisely decided to fold their cards and accept our protection. Once more the Republic achieves a massive victory!"
+argfor.17.d:0 "우리 군의 힘에 위협을 느낀 몬테비데오 정부는 그들의 패를 포기하고 우리의 보호를 받아들이기로 현명한 결정을 내렸습니다. 공화국이 다시 한 번 큰 승리를 거두었습니다!"
 argfor.17.a:0 "만세!"
 
 ## Immigration ##
