--- a/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
@@ -4,13 +4,13 @@ l_english:
 BOL_CLR_BM:0 "§G검은 월요일 영향 모두 지우기§!\n"
 BOL_MID_BM:0 "§G효과는 우리의 접근 방식에 따라 달라질 수 있습니다§!"
 BOL_SHIPPIE:0 "이것은 우리의 해안 주 중 하나에 §Y2 해군 조선소§!를 추가할 것입니다"
-BOL_REVENGE:0 "§RThis may lead to war with our neighbours §Y[CHL.GetNameWithFlag]§! and §Y[PAR.GetNameWithFlag]§! §!\n"
+BOL_REVENGE:0 "§R이로인해 이웃 국가인 §Y[CHL.GetNameWithFlag]§! 및 §Y[PAR.GetNameWithFlag]§!와의 전쟁이 일어날 수 있습니다 §!\n"
 
 ### Decision ###
-BOL_Enact_our_Revenge:0 "Enact our Revenge"
-BOL_Enact_our_Revenge_desc:0 "We have suffered, we have wept but through our defeats we have become stronger. As the ideological clash between the workers class and the old establishement rages on the European continent, it has sent shockwaves to our own region. With our neighbours tied up in conflicts of their own, now is the time to restore our nation to greatness and enact our revenge!"
+BOL_Enact_our_Revenge:0 "복수를 시작한다"
+BOL_Enact_our_Revenge_desc:0 "우리는 고통을 겪었고, 눈물을 흘렸지만, 패배를 통해 더욱 강해졌습니다. 노동자 계급과 구시대의 잔재 사이의 이념적 충돌이 유럽 대륙에서 격화되면서 그것은 우리 지역에 충격을 주었습니다. 이웃들이 자신들의 갈등에 얽매여 있는 지금이야말로 위대한 나라로 회복하고 우리의 복수를 할 때입니다!"
 BOL_Join_Internationale:0 "인터내셔널 가입"
-BOL_Join_Internationale_desc:0 "With the succeses of our comrades in the rest of South America, we ourselves must now ask ourselves whether we should help the global spread of the revolution by joining the Internationale."
+BOL_Join_Internationale_desc:0 "남아메리카의 나머지 지역에서의 동지들의 성공으로 우리는 이제 인터내셔널에 가입함으로써 혁명의 세계적 확산을 도와야 하는지 자문해 보아야 합니다."
 
 ### Ideas ###
 BOL_Struggling_Economy:0 "경제 대공황"
