--- a/Kaiserreich Korean Translation/localisation/KR_Egypt_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Egypt_l_english.yml
@@ -279,12 +279,12 @@ EGY_support_somalia:0 "소말리아 지원"
 EGY_support_somalia_desc:0 "Somalia is another country in opposition to the Empire of Ethiopia. We should support them, and offer them entrance into the Cairo Pact."
 EGY_divide_ethiopia:0 "에티오피아 분할"
 EGY_divide_ethiopia_desc:0 "The empire of Ethiopia has a number of tribes within her borders that are not loyal to the government. If we can push these tribes, we have the ability to cause some tension from within Ethiopia that shall destroy them before any conflict breaks out."
-EGY_nile_proclamation:0 "Nile Proclamation"
-EGY_nile_proclamation_desc:0 "The Nile is the lifeblood of Egypt. We shall never let it fall into the hands of those that will oppose the Sultanate of Egypt. The river shall belong to Egypt."
+EGY_nile_proclamation:0 "나일 선언"
+EGY_nile_proclamation_desc:0 "The Nile is the lifeblood of Egypt. We shall never let it fall into the hands of those that will oppose the Sultanate of Egypt. The river shall belong to Egypt; those further upstream must not inhibit this reality or they shall suffr grave consequences."
 EGY_gather_african_allies:0 "아프리카 동맹 규합"
 EGY_gather_african_allies_desc:0 "There are a number of countries within Africa that might be of use to us as allies. Let us expand our sphere of influence to these countries and invite them into the Cairo Pact."
-EGY_end_the_rivalry:0 "End the Rivalry"
-EGY_end_the_rivalry_desc:0 "It is time to end this rivalry with the Empire of Ethiopia. Egypt shall rule the Nile and they shall never threaten the Nile again."
+EGY_end_the_rivalry:0 "경쟁관계 종식"
+EGY_end_the_rivalry_desc:0 "It is time to end this rivalry with the Empire of Ethiopia. Egypt shall rule the Nile and the Ethiopians shall never threaten the Nile again."
 EGY_consildating_new_lands:0 "새로운 영토를 통합"
 EGY_consildating_new_lands_desc:0 "With our victory against the Ottoman Empire, we have been able to expand the borders of the sultanate of Egypt. We should now spend some time consolidating our hold on the new lands."
 EGY_dockyards_mediterranean:0 "Dockyards of the Mediterranean"
@@ -304,11 +304,11 @@ EGY_mashraqi_rail_desc:0 "With the future conflicts that are likely to erupt in 
 EGY_damascus_steel:0 "다마스쿠스 철강"
 EGY_damascus_steel_desc:0 "In the past Damascus was famous for its steel production, we should focus on modernising it and making it available for the Egyptian Economy."
 EGY_side_with_iran:0 "[PER.GetNameDef]의 편에 서다"
-EGY_side_with_iran_desc:0 "We have chosen to align ourselves with the powerful empire of [PER.GetNameDef]. We shall align ourselves with the Iranians, together we shall make Arabia tremble before us."
+EGY_side_with_iran_desc:0 "We have chosen to align ourselves with the powerful [PER.GetName]. We shall align ourselves with the [PER.GetAdjective]s, together we shall make Arabia tremble before us."
 EGY_keep_arabs_divided:0 "아랍을 계속 분열시켜라"
 EGY_keep_arabs_divided_desc:0 "There are numerous Arab tribes that have feuded with each other for generations. Tribal rivalries that go back centuries. Let us exploit this to cause dissension within Arabia."
-EGY_cairo_to_tehran_rail:0 "카이로-테헤란 철도"
-EGY_cairo_to_tehran_rail_desc:0 "The cities of Cairo and Tehran are some of the greatest cities within the greater middle east. A project to build a railroad between the two cities will not only boost the economies of both countries but also help out the militaries of both countries."
+EGY_cairo_to_tehran_rail:0 "카이로-[266.GetName] 철도"
+EGY_cairo_to_tehran_rail_desc:0 "The cities of Cairo and [266.GetName] are some of the greatest cities within the greater Middle East. A project to build a railroad between the two cities will not only boost the economies of both countries but also help out the militaries of both countries."
 EGY_bedouin_agitation:0 "베두인 동맹"
 EGY_bedouin_agitation_desc:0 "While many Bedouin are within Arabia, there are just as many within the borders of Egypt. We should focus on allying with some of the powerful nomadic clans and encourage them to fight on behalf of Egypt."
 EGY_reclaiming_the_suez:0 "수에즈 영유권 주장"
@@ -947,12 +947,12 @@ egy.117.a:0 "A good match, whom cares about the conservaitves"
 egy.117.b:0 "We shall listen to the conservaitves"
 
 egy.118.t:0 "A Royal Wedding"
-egy.118.d:0 "Today in Tehran the royal wedding has at long last has arrived and the whole city has been decked out to honour the couple. As part of the celebration, the shah had the Amjadiye stadium attended by 25,000 of the [PER.GetAdjective] elite with synchronized acrobatics by students being followed by bastani ([PER.GetAdjective] calisthenics), fencing, and football. Thousands of people cheer as Soltan Hamid Mizra Qajar and Princess Fawzia Fuad pass them by as they head to the Marble place to be wed uniting the Qajars of [PER.GetName] and the Alawiyyas of Egypt together."
-egy.118.a:0 "who doesn't love a royal wedding"
+egy.118.d:0 "Today in [266.GetName] the royal wedding has at long last has arrived and the whole city has been decked out to honour the couple. As part of the celebration, the shah had the Amjadiye stadium attended by 25,000 of the [PER.GetAdjective] elite with synchronized acrobatics by students being followed by bastani ([PER.GetAdjective] calisthenics), fencing, and football. Thousands of people cheer as Soltan Hamid Mizra Qajar and Princess Fawzia Fuad pass them by as they head to the Marble place to be wed uniting the Qajars of [PER.GetName] and the Alawiyyas of Egypt together."
+egy.118.a:0 "who doesn't love a royal wedding."
 
 egy.119.t:0 "The shah snubs Fawzia!"
-egy.119.d:0 "We had planned on setting up a royal marriage between the Qajar dynasty and our own dynasty. However, the Iranians have snubbed Princess Fawzia and refused her marriage. It is their loss, we shall find a much more suitable match then the Iranians."
-egy.119.a:0 "We shall find someone more suitable"
+egy.119.d:0 "We had planned on setting up a royal marriage between the Qajar dynasty and our own dynasty. However, the [PER.GetAdjective]s have snubbed Princess Fawzia and refused her marriage. It is their loss, we shall find a much more suitable match then the [PER.GetAdjective]s."
+egy.119.a:0 "We shall find someone more suitable."
 
 egy.120.t:0 "콥틱 교황 선거"
 egy.120.d:0 "With the death of the Pope John XIX of Alexandria. The Coptic Orthodox Church of Alexandria now must select a new man to be the pope. There are three potential candidates for this holy office: Theophilus, Yusab, Macarius. Theophilus is the bishop of Jerusalem and the diocese of Sharqiyyah. Theophilus is a rather conservative canidate though an energetic and rather rich bishop and is backed by the interests of the Holy Synod of Bishops which hope to strengthen the role of Patriarch and render the lay Majis obslote. Yusab is the acting Patriarch and Bishop of Girga, he runs on a campaign of focusing on a spiritual Nahda(renaissance). Macarius is the bishop of Asyut and has a campaign of reform. Whom shall be elected as the next Pope of the Coptic Orthodox Church of Alexandria?"
@@ -1168,10 +1168,10 @@ egy.177.t:0 "The Tuareg refuses to join"
 egy.177.d:0 "The Tuareg have decided to refuse our offer to join the Cairo Pact."
 egy.177.a:0 "Damn Tuareg"
 
-egy.178.t:0 "Join the Cairo Pact"
+egy.178.t:0 "카이로 조약 가입"
 egy.178.d:0 "The Egyptians have offered us an offer to join the Cairo Pact. Some think that this will strengthen us. However some think that the Offer is just a trick to get us to be subservient to the Egyptian’s ambitions."
-egy.178.a:0 "We shall join the Egyptians"
-egy.178.b:0 "We do not need the Egyptians"
+egy.178.a:0 "우리는 이집트와 함께 할 것이다"
+egy.178.b:0 "우리는 이집트가 필요없다"
 
 egy.179.t:0 "Waddai joins the Cairo Pact"
 egy.179.d:0 "The Waddai have decided to join the Cairo Pact."
