--- a/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
@@ -3,21 +3,21 @@
 ### Parties ###
 GRU_totalist_party:0 "사회주의 통일당"
 GRU_totalist_party_long:0 "사회주의통일당"
-GRU_radical_socialist_party:0 "독일자유노동자동맹"
-GRU_radical_socialist_party_long:0 "독일자유노동자동맹"
-GRU_syndicalist_party:0 "스파르타키즈"
-GRU_syndicalist_party_long:0 "스파르타키즈"
-GRU_social_democrat_party:0 "기독교사회연합"
-GRU_social_democrat_party_long:0 "기독교사회연합"
+GRU_radical_socialist_party:0 "독일자유노동조합"
+GRU_radical_socialist_party_long:0 "독일자유노동조합"
+GRU_syndicalist_party:0 "DOI/SP"
+GRU_syndicalist_party_long:0 "독일 인터내셔널/생디칼리즘 단체당"
+GRU_social_democrat_party:0 "독일사회민주당"
+GRU_social_democrat_party_long:0 "독일사회민주당"
 GRU_social_liberal_party:0 "기독교민주연합"
 GRU_social_liberal_party_long:0 "기독교민주연합"
-GRU_market_liberal_party:0 "자유민주당"
-GRU_market_liberal_party_long:0 "자유민주당"
-GRU_social_conservative_party:0 "자유연합"
-GRU_social_conservative_party_long:0 "자유연합"
-GRU_authoritarian_democrat_party:0 "독일 보수당"
-GRU_authoritarian_democrat_party_long:0 "독일 보수당"
-GRU_paternal_autocrat_party:0 "독일 조국당"
-GRU_paternal_autocrat_party_long:0 "독일 조국당"
-GRU_national_populist_party:0 "범 독일 연맹"
-GRU_national_populist_party_long:0 "범 독일 연맹"
+GRU_market_liberal_party:0 "국민자유당"
+GRU_market_liberal_party_long:0 "국민자유당"
+GRU_social_conservative_party:0 "보수인민당"
+GRU_social_conservative_party_long:0 "보수인민당"
+GRU_authoritarian_democrat_party:0 "독일보수당"
+GRU_authoritarian_democrat_party_long:0 "독일보수당"
+GRU_paternal_autocrat_party:0 "군부"
+GRU_paternal_autocrat_party_long:0 "군부"
+GRU_national_populist_party:0 "독일노동당"
+GRU_national_populist_party_long:0 "독일노동당"
