--- a/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
@@ -23,12 +23,12 @@ GEX_AFR_paternal_autocrat_party:0 "비상 정권"
 GEX_paternal_autocrat_party_long:0 "독일 조국당"
 GEX_KAI_paternal_autocrat_party_long:0 "황제 충성 궁정당"
 GEX_AFR_paternal_autocrat_party_long:0 "비상 정부"
-GEX_national_populist_party:0 "범 독일 연맹"
-GEX_national_populist_party_long:0 "범 독일 연맹"
+GEX_national_populist_party:0 "범독일 연맹"
+GEX_national_populist_party_long:0 "범독일 연맹"
 
 ### Focuses ###
 GEX_darkest_hour:0 "가장 암울한 시기"
-GEX_darkest_hour_desc:0 "우리는 생디칼리스트 쥐새끼들에게 조국에서 쫓겨나 도망쳐왔습니다. 이는 참으로 우리에게 있어 가장 암울한 시기입니다."
+GEX_darkest_hour_desc:0 "우리는 생디칼리스트 쥐새끼들에게 조국에서 쫓겨나 도망쳐왔습니다. 이는 참으로 우리에게 있어 가장 암울한 시기입니다. 우리의 대의에 충성하는 사람들을 규합하고, 우리 땅을 되찾는겠다는 약속을 울부짖읍시다."
 GEX_kili:0 "킬리만자로에서의 실험"
 GEX_kili_desc:0 "조국에서 패주할 때 우리는 우리의 많은 기반시설과 장비들을 두고 왔습니다. 우리가 겨우 가지고 나온, 가장 핵심적인 기술 중 하나가 바로 핵 기술입니다. 우리는 킬리만자로에서 실험을 진행하여 고향에 돌아가는 데 도움을 줄 병기의 잠재력을 극대화해야 합니다."
 GEX_air:0 "하늘에서의 5주"
@@ -75,7 +75,8 @@ GEX_askari1:0 "아프리카 군단"
 GEX_askari2:0 "아프리카 군단 확장"
 GEX_askari3:0 "아스카리의 복무와 권리"
 GEX_askari4:0 "타협은 없다!"
-GEX_way_home:0 "조국으로의 접근"
+GEX_way_home_idea:0:0 "조국으로의 접근"
+GEX_way_home_idea_desc:0 "우리는 새로운 제국해군을 만드는데 상당한 국가적인 지원을 하고 있습니다. 대형 함선을 쉽게 생산할 수 있는 능력은 부족한 반면, 소형 함선의 생산량은 크게 증가하였습니다."
 
 ### Tooltips ###
 GEX_fled_europe:0 "독일이 유럽에서 쫓겨남\n"
