--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -7,8 +7,8 @@ GRE_syndicalist_party:0 "그리스 사회노동당"
 GRE_syndicalist_party_long:0 "그리스 사회노동당"
 GRE_radical_socialist_party:0 "농민 민주 전선"
 GRE_radical_socialist_party_long:0 "농민 민주 전선"
-GRE_social_democrat_party:0 "민족 통일당"
-GRE_social_democrat_party_long:0 "민족 통일당"
+GRE_social_democrat_party:0 "민족통일당"
+GRE_social_democrat_party_long:0 "민족통일당"
 GRE_social_liberal_party:0 "신 자유 연맹"
 GRE_social_liberal_party_long:0 "신 자유 연맹"
 GRE_market_liberal_party:0 "자유당"
@@ -19,8 +19,8 @@ GRE_authoritarian_democrat_party:0 "신 국가 운동"
 GRE_authoritarian_democrat_party_long:0 "신 국가 운동"
 GRE_paternal_autocrat_party:0 "자유 사상가당"
 GRE_paternal_autocrat_party_long:0 "자유 사상가당"
-GRE_national_populist_party:0 "민족 그리스 군단"
-GRE_national_populist_party_long:0 "민족 그리스 군단"
+GRE_national_populist_party:0 그리스국민연합"
+GRE_national_populist_party_long:0 "그리스국민연합"
 
 ### Ideas ###
 GRE_legacy_of_alexander_idea:0 "알렉산드로스의 유산"
